test/org/midica/testfiles/failing/chord-with-unknown-note-number.midica
INCLUDE_FILE inc/instruments.midica

CHORD test c d 128
